# QT-QML-C-codes

./: CMakeLists.txt  main.cpp  recievetestmessage.cpp  recievetestmessage.h  test.cpp  test.h
QObject/qt6-QSharedPointer_QLIST_QMAP/: CMakeLists.txt  main.cpp  test.cpp  test.h
QObject/qt6-QTContainerClasses_QList/: CMakeLists.txt  main.cpp
QObject/qt6-parentChild/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
QObject/qt6-sharedPtr-ex/: CMakeLists.txt  cat.cpp  cat.h  main.cpp  toy.cpp  toy.h
casting_ex/: CMakeLists.txt  car.cpp  car.h  feline.cpp  feline.h  main.cpp  racecar.cpp  racecar.h
